jlink bash script